Complete restricted area algorithms
