# ips-frontend_v02/src/app/api/models/restricted-area.ts
@@ -1,9 +1,15 @@
 /* tslint:disable */
 export interface RestrictedArea {
+  bottomLeftCoordY?: number;
   id?: number;
-  coordinateTopX?: number;
-  coordinateTopY?: number;
-  coordinateBottomX?: number;
-  coordinateBottomY?: number;
-  planId?: number;
+  topLeftCoordY?: number;
+  topRightCoordX?: number;
+  topRightCoordY?: number;
+  bottomLeftCoordX?: number;
+  topLeftCoordX?: number;
+  bottomRightCoordX?: number;
+  bottomRightCoordY?: number;
+  planId?: string;
+  restrictedAreaName?: string;
+  accessLevel?: string;
 }
